// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextView should be rendered correctly 1`] = `
<div
  className="typographyLoveship typography-14"
>
  <p>
    Test text
  </p>
</div>
`;

exports[`RichTextView should be rendered correctly with extra props 1`] = `
<div
  className="typographyLoveship typography-12"
>
  <p>
    Test text
  </p>
</div>
`;
